# D-MemFS

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ja.md  RELEASE_CHECKLIST.md  TESTING.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: publish.yml  test.yml
benchmarks/: compare_backends.py  parametric_sweep.py
benchmarks/results/: benchmark_20260226_170452.json  benchmark_20260226_170452.md  benchmark_20260226_173448.json  benchmark_20260226_173448.md  benchmark_20260228_020233.json  benchmark_20260228_020233.md  benchmark_20260228_022104.md  benchmark_current_result.json  benchmark_current_result.md  parametric_sweep_20260228_030215.md  parametric_sweep_20260228_031038.md
dmemfs/: __init__.py  _async.py  _exceptions.py  _file.py  _fs.py  _handle.py  _lock.py  _memory_guard.py  _memory_info.py  _path.py  _pytest_plugin.py  _quota.py  _text.py  _typing.py
docs/api_md/: index.md
docs/design/: DetailedDesignSpec.md  DetailedDesignSpec_test.md  DetailedDesignSpec_test_v2.md  DetailedDesignSpec_v2.md  spec_v13.md  spec_v14.md
examples/: archive_extraction.md  ci_debug_export.md  etl_staging_multithread.md  memory_guard_streaming.md  sqlite_test_fixtures.md
tests/: conftest.py
tests/helpers/: asserts.py  concurrency.py  fixtures.py
tests/integration/: test_async.py  test_concurrency.py  test_export_import.py  test_memory_guard_integration.py  test_mkdir_listdir.py  test_open_modes.py  test_remove_rmtree.py  test_rename_move.py  test_stats.py
tests/property/: test_hypothesis.py
tests/scenarios/: test_usecase_archive_like.py  test_usecase_etl_staging.py  test_usecase_restricted_env.py  (+1 more)
(+14 files in other folders)
